Closed Bug 1669649 Opened 5 years ago Closed 5 years ago

The context menu of the "mic"/"camera"/"share screen" icons from the tray is not properly diplayed

Categories

(Firefox :: Site Permissions, defect, P1)

Firefox 83
Desktop
Windows
defect

Tracking

()

VERIFIED FIXED
83 Branch
Tracking Status
firefox83 --- verified
firefox84 --- verified

People

(Reporter: rpopovici, Assigned: mconley)

References

(Blocks 1 open bug)

Details

Attachments

(3 files)

Attached image 2020-10-06_14h26_55.png

Affected versions:
Nightly v83.0a1

Affected platforms:
Windows 10
Windows 7

Steps to reproduce:

  1. Host or join a meeting
  2. Allow the microphone and camera permissions and share the screen.
  3. Click the "Mic"/"Camera"/"Share screen" icons from the tray.

Expected result:
The context menu should be displayed under the selected icons on the primary display if 2 displays are present.

Actual result:
The position of the context menu is displayed on the bottom of the tray on secondary display if 2 displays are present.

Regression range:
Feature implementation enhancement.

OS: Unspecified → Windows
Hardware: Unspecified → Desktop

The severity of this bug could be S2.

Summary: The context menu of the "mic"/"camera"/"share screen" icons from the tray is not correctly diplayed → The context menu of the "mic"/"camera"/"share screen" icons from the tray is not properly diplayed
Component: WebRTC → Site Permissions
Product: Core → Firefox
Target Milestone: --- → 83 Branch

Mike, could you take a look please?

Blocks: 1642799
Severity: -- → S2
Flags: needinfo?(mconley)
Priority: -- → P1
See Also: → 1663784

Let's see what we can do here.

Assignee: nobody → mconley
Flags: needinfo?(mconley)

Unfortunately, it's pretty difficult to write an automated test for this.

Pushed by mconley@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3bcc4c4060a4 Use ShowPopupAtScreen to get the SystemStatusBar menu to open at the right coordinates. r=mhowell
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED

mconley, I haven't tested this prior to fixing this bug so I don't know how it looked before, but I'm now on the latest Nightly and the context menu is still off on my system. See attached.
Should this be reopened or shall I file a new bug?

Attached image Screenshot

ni? for comment 7.

Flags: needinfo?(mconley)
Flags: qe-verify+

For me, the issue has been fixed. The context menu is properly shown where the click is made.
Verified on Nightly v84.0a1 and Beta v83.0b2 on Windows 7 and 10.

Itiel, I see you are running an Arabic language pack on Windows. Am I right?
I have also switched my Windows global language to Arabic to attempt your reproduction, but I could not reproduce it.
If the issue still reproduced on your end, a new issue should definitely be logged. Does it still reproduce in the latest Nightly or Beta?

Flags: needinfo?(itiel_yn8)
Status: RESOLVED → VERIFIED
Flags: qe-verify+

(In reply to Bodea Daniel [:danibodea] from comment #10)

Itiel, I see you are running an Arabic language pack on Windows. Am I right?
I have also switched my Windows global language to Arabic to attempt your reproduction, but I could not reproduce it.
If the issue still reproduced on your end, a new issue should definitely be logged. Does it still reproduce in the latest Nightly or Beta?

Sigh. Of course this had to be a DPI issue..
STR:

  1. Set DPI to anything above 100%
  2. Open https://www.webrtc-experiment.com/Pluginfree-Screen-Sharing/#8135501154568966
  3. Click "Share you screen" and select a window
  4. Right click the system icon tray

I'll file a new bug.

Flags: needinfo?(mconley)
Flags: needinfo?(itiel_yn8)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: