Bug 1669649 - Use ShowPopupAtScreen to get the SystemStatusBar menu to open at the right coordinates. r=mhowell

Unfortunately, it's pretty difficult to write an automated test for this.

Differential Revision: https://phabricator.services.mozilla.com/D93123